# substrings

./: CMakeLists.txt  main.cpp
core/: FileIndexer.cpp  FileIndexer.h  FileSearcher.cpp  FileSearcher.h  Index.cpp  Index.h  Indexer.cpp  Indexer.h  Searcher.cpp  Searcher.h  Watcher.cpp  Watcher.h
gui/: MainWindow.cpp  MainWindow.h
